force-app/main/default/objects/Product2/fields/Contraindications__c.field-meta.xml
<CustomField>
    <fullName>Contraindications__c</fullName>
    <label>Contraindications</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>