force-app/main/default/objects/Product2/fields/Dosage_Information__c.field-meta.xml
<CustomField>
    <fullName>Dosage_Information__c</fullName>
    <label>Dosage Information</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>