force-app/main/default/objects/Product2/fields/Formulation__c.field-meta.xml
<CustomField>
    <fullName>Formulation__c</fullName>
    <label>Formulation</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tablet</fullName>
            </value>
            <value>
                <fullName>Capsule</fullName>
            </value>
            <value>
                <fullName>Syrup</fullName>
            </value>
            <value>
                <fullName>Tube</fullName>
            </value>
            <value>
                <fullName>Inhaler</fullName>
            </value>
            <value>
                <fullName>Injection</fullName>
            </value>
            <value>
                <fullName>Drops</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>