force-app/main/default/objects/Product2/fields/Indications__c.field-meta.xml
<CustomField>
    <fullName>Indications__c</fullName>
    <label>Indications</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>