force-app/main/default/objects/Product2/fields/Key_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Key_Benefits__c</fullName>
    <label>Key Benefits</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>