force-app/main/default/objects/Product2/fields/Pack_Size__c.field-meta.xml
<CustomField>
    <fullName>Pack_Size__c</fullName>
    <label>Pack Size</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>