force-app/main/default/objects/Product2/fields/Strength__c.field-meta.xml
<CustomField>
    <fullName>Strength__c</fullName>
    <label>Strength</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>